--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div class="container">
         <div class="content">
             <h1 class="title">Slava Kim</h1>
-            <h2 class="subtitle">Staff Engineering Coaching</h2>
+            <h2 class="subtitle">Staff Engineer Coaching</h2>
             <div class="description">
                 <p>10+ years of experience, previously a staff engineer at Figma working on <a href="https://www.figma.com/blog/keeping-figma-fast/" style="color: #007bff;">client-side performance</a> and <a href="https://www.figma.com/blog/livegraph-real-time-data-fetching-at-figma/" style="color: #007bff;">realtime infrastructure</a>.</p>
                 <p>Technical leadership. Engineering excellence. Lasting impact.</p>
